--- a/Python演習3.ipynb
+++ b/Python演習3.ipynb
@@ -1,30 +1,19 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Python演習課題3"
-      ],
       "metadata": {
         "id": "1GvYheQmapMq"
-      }
+      },
+      "source": [
+        "# Python演習課題3"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "g4oSY5udavEu"
+      },
       "source": [
         "### 問1\n",
         "\n",
@@ -42,25 +31,47 @@
         "# テストケース3\n",
         "33\n",
         "```"
-      ],
-      "metadata": {
-        "id": "g4oSY5udavEu"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "def nabeatsu(num:int) -> str:\n",
-        "    return"
-      ],
+      "execution_count": 10,
       "metadata": {
         "id": "g_ynjqG6yaEk"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "def nabeatsu(num: int) -> str:\n",
+        "    is_multiple_of_3 = (num % 3 == 0)\n",
+        "    contains_3 = ('3' in str(num))\n",
+        "\n",
+        "    if is_multiple_of_3 and contains_3:\n",
+        "        return 'piyo'\n",
+        "    elif is_multiple_of_3:\n",
+        "        return 'hoge'\n",
+        "    elif contains_3:\n",
+        "        return 'huga'\n",
+        "    else:\n",
+        "        return ''\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {
+        "id": "9_Ce7I6s4nBB"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "case_1: hoge\n",
+            "case_2: huga\n",
+            "case_3: piyo\n"
+          ]
+        }
+      ],
       "source": [
         "case_1 = 6\n",
         "case_2 = 13\n",
@@ -69,15 +80,13 @@
         "print('case_1:', nabeatsu(case_1))\n",
         "print('case_2:', nabeatsu(case_2))\n",
         "print('case_3:', nabeatsu(case_3))"
-      ],
-      "metadata": {
-        "id": "9_Ce7I6s4nBB"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "sVuEIAKza443"
+      },
       "source": [
         "### 問2\n",
         "\n",
@@ -102,25 +111,46 @@
         "配列: [2, 9, 11]\n",
         "ターゲット: 100\n",
         "```"
-      ],
-      "metadata": {
-        "id": "sVuEIAKza443"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "def combination_sum(candidates:list, target:int) -> list:\n",
-        "    return"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "a8lfJsQBYI9h"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "def combination_sum(candidates: list, target: int) -> list:\n",
+        "    dp = [[] for _ in range(target + 1)]\n",
+        "    dp[0] = [[]]\n",
+        "\n",
+        "    for c in candidates:\n",
+        "        for t in range(c, target + 1):\n",
+        "            for comb in dp[t - c]:\n",
+        "                if comb.count(c) < 10:\n",
+        "                    dp[t].append(comb + [c])\n",
+        "\n",
+        "    return dp[target]\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "ZMwrvj5N8MZo"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[2, 2, 2, 2, 2, 2, 2], [2, 2, 2, 2, 3, 3], [2, 3, 3, 3, 3], [2, 2, 2, 2, 6], [2, 3, 3, 6], [2, 6, 6], [2, 2, 3, 7], [7, 7]]\n",
+            "[[2, 2, 2, 2], [2, 3, 3], [3, 5]]\n",
+            "[[2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2], [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 9, 9], [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 9, 9, 9, 9], [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 9, 9, 9, 9, 9, 9], [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 9, 9, 9, 9, 9, 9, 9, 9], [2, 2, 2, 2, 2, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9], [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 9, 11], [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 9, 9, 9, 11], [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 9, 9, 9, 9, 9, 11], [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 9, 9, 9, 9, 9, 9, 9, 11], [2, 2, 2, 2, 9, 9, 9, 9, 9, 9, 9, 9, 9, 11], [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 11, 11], [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 9, 9, 11, 11], [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 9, 9, 9, 9, 11, 11], [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 9, 9, 9, 9, 9, 9, 11, 11], [2, 2, 2, 9, 9, 9, 9, 9, 9, 9, 9, 11, 11], [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 9, 11, 11, 11], [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 9, 9, 9, 11, 11, 11], [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 9, 9, 9, 9, 9, 11, 11, 11], [2, 2, 9, 9, 9, 9, 9, 9, 9, 11, 11, 11], [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 11, 11, 11, 11], [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 9, 9, 11, 11, 11, 11], [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 9, 9, 9, 9, 11, 11, 11, 11], [2, 9, 9, 9, 9, 9, 9, 11, 11, 11, 11], [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 9, 11, 11, 11, 11, 11], [2, 2, 2, 2, 2, 2, 2, 2, 2, 9, 9, 9, 11, 11, 11, 11, 11], [9, 9, 9, 9, 9, 11, 11, 11, 11, 11], [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 11, 11, 11, 11, 11, 11], [2, 2, 2, 2, 2, 2, 2, 2, 9, 9, 11, 11, 11, 11, 11, 11], [2, 2, 2, 2, 2, 2, 2, 9, 11, 11, 11, 11, 11, 11, 11], [2, 2, 2, 2, 2, 2, 11, 11, 11, 11, 11, 11, 11, 11]]\n"
+          ]
+        }
+      ],
       "source": [
         "candidates_1 = [2, 3, 6, 7]\n",
         "target_1 = 14\n",
@@ -134,15 +164,13 @@
         "print(combination_sum(candidates_1, target_1))\n",
         "print(combination_sum(candidates_2, target_2))\n",
         "print(combination_sum(candidates_3, target_3))"
-      ],
-      "metadata": {
-        "id": "ZMwrvj5N8MZo"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "6PqQRc3Ya-im"
+      },
       "source": [
         "### 問3\n",
         "\n",
@@ -162,25 +190,48 @@
         "# テストケース3\n",
         "Hello I’m ((firstname) (lastname) and I’m {age} years old!\n",
         "```"
-      ],
-      "metadata": {
-        "id": "6PqQRc3Ya-im"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "def format_checker(text:str) -> bool:\n",
-        "    return"
-      ],
+      "execution_count": 7,
       "metadata": {
         "id": "DCQPWtTLYJxV"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "def format_checker(s: str) -> bool:\n",
+        "    stack = []\n",
+        "    pairs = {')': '(', ']': '[', '}': '{'}\n",
+        "\n",
+        "    for ch in s:\n",
+        "        if ch in '([{':\n",
+        "            stack.append(ch)\n",
+        "        elif ch in ')]}':\n",
+        "            if not stack or stack[-1] != pairs[ch]:\n",
+        "                return False\n",
+        "            stack.pop()\n",
+        "\n",
+        "    return not stack\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "id": "SKNPYZD34mSa"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "case_1: True\n",
+            "case_2: False\n",
+            "case_3: False\n"
+          ]
+        }
+      ],
       "source": [
         "case_1 = 'Hello I’m [(firstname) (lastname)] and I’m {age} years old!'\n",
         "case_2 = 'Hello I’m [(firstname) (lastname]) and I’m {age} years old!'\n",
@@ -189,12 +240,30 @@
         "print('case_1:', format_checker(case_1))\n",
         "print('case_2:', format_checker(case_2))\n",
         "print('case_3:', format_checker(case_3))"
-      ],
-      "metadata": {
-        "id": "SKNPYZD34mSa"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.0"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
